Added server code. Moved Client to own folder. Added google-maps.

--- a/client/.storybook/preview-head.html
+++ b/client/.storybook/preview-head.html
@@ -1,4 +1,6 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
 <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBvobiFxMVC72Zbd2YmfcxawWMpwG_QLKs&libraries=places"></script>
+
 
