--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,7 +15,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_PLACES_API_KEY%&libraries=places"></script>
+    <script type="text/javascript">
+      window.REACT_APP_PLACES_API_KEY = "%REACT_APP_PLACES_API_KEY%";
+    </script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
