--- a/website/index.html
+++ b/website/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>W.A.S.P.S.</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <style>
 </style>
