fixed media queries for chrome and added hooked up login button

--- a/website/index.html
+++ b/website/index.html
@@ -138,7 +138,7 @@
 </div>
 
 <div id="loginModal" class="modal">
-    <form onsubmit="return validateLoginForm()" name="loginForm" class="modal-content" method="post">
+    <form action="../server/login.php" onsubmit="return validateLoginForm()" name="loginForm" class="modal-content" method="post">
         <span onclick="closeLoginModal()" class="close" title="Close Modal">&times;</span>
         <div class="container">
             <label><b>Username</b></label>
